--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,4 +38,4 @@ security:
     # http://symfony.com/doc/current/cookbook/security/access_control.html
     access_control:
         - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, roles: ROLE_AMIN }
+        - { path: ^/admin/, roles: ROLE_ADMIN }
