Creating logout for the Admin bundle.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,6 +31,9 @@ security:
             form_login:
                 login_path: blog_admin_security_login
                 check_path: blog_admin_security_logincheck
+            logout:
+                path: blog_admin_security_logout
+                target: /admin/post
 
 
     # with these settings you can restrict or allow access for different parts
